[gd_scene load_steps=3 format=3 uid="uid://dae3h2hdc1gd2"]

[ext_resource type="FontFile" uid="uid://diu6xu0gp2tjw" path="res://assets/chonky_bunny/Chonky Bunny.ttf" id="1_5p8wc"]
[ext_resource type="Script" uid="uid://bdhsmf2qo7mla" path="res://script/settings.gd" id="1_6wm04"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6wm04")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 64.0
offset_bottom = 192.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 28
text = "Change aim color : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 320.0
offset_top = -132.0
offset_right = -320.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Red" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 24
text = "Red"

[node name="Blue" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 24
text = "Blue"

[node name="Yellow" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 24
text = "Yellow"

[node name="Green" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 24
text = "Green"

[node name="Purple" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 24
text = "Purple"

[node name="Orange" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 24
text = "Orange"

[node name="Back" type="Button" parent="."]
layout_mode = 2
offset_left = 64.0
offset_top = 520.0
offset_right = 162.0
offset_bottom = 573.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 24
text = "Main Menu"

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(384, 320, 760, 320)

[connection signal="pressed" from="HBoxContainer/Red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="HBoxContainer/Blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="HBoxContainer/Yellow" to="." method="_on_yellow_pressed"]
[connection signal="pressed" from="HBoxContainer/Green" to="." method="_on_green_pressed"]
[connection signal="pressed" from="HBoxContainer/Purple" to="." method="_on_purple_pressed"]
[connection signal="pressed" from="HBoxContainer/Orange" to="." method="_on_orange_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
